<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingTop="10dp"
    android:elevation="4dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".shared.LoginActivity">
    <TextView
        android:id="@+id/rmk761e4yfi"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:layout_marginBottom="70dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Login"
        />
    <EditText
        android:id="@+id/usernameInput"
        android:textColor="#605E5E"
        android:textSize="20sp"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="59dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="Username"
        android:textColorHint="#605E5E"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"/>

    <LinearLayout
        android:id="@+id/SignUpUsernameBar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#605E5E"
        android:layout_marginBottom="28dp"
        android:layout_marginHorizontal="59dp"
        android:orientation="vertical">
    </LinearLayout>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="59dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="#605E5E"
        android:hint="Password"
        android:textColor="#605E5E"
        android:textSize="20sp"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textWebPassword"/>

    <LinearLayout
        android:id="@+id/rnqs3w0ypapk"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#605E5E"
        android:layout_marginBottom="81dp"
        android:layout_marginHorizontal="59dp"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/r04nwgdi2lflr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="39dp"
        android:layout_marginHorizontal="42dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ro3l6zckuuxc"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:paddingVertical="18dp"
                android:text="Sign in"
                android:textColor="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/rd4piu837f8d"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:elevation="4dp"
                android:paddingVertical="18dp"
                android:text="Sign up"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/rd03ys6q17jt"
        android:textColor="#DDDDDD"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Or"
        />

    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:text="Sign in as guest"
        android:textColor="#DDDDDD"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"/>
    <TextView
        android:id="@+id/rmqwyrag0qwk"
        android:textColor="#DDDDDD"
        android:textSize="20sp"
        android:layout_marginBottom="24dp"

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Or"
        />
    <TextView
        android:id="@+id/OrganizerText"
        android:textColor="#DDDDDD"
        android:textSize="20sp"
        android:layout_height="48dp"
        android:layout_width="wrap_content"
        android:text="Sign in/Sign up as Organizer"
        android:clickable="true"
        android:focusable="true"
        />
</LinearLayout>
