...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_item"
        android:icon="@drawable/baseline_home_24"
        android:title="Home" />
    <item
        android:id="@+id/profile_item"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="Profile" />
    <item
        android:id="@+id/events_item"
        android:icon="@drawable/baseline_event_24"
        android:title="My Events" />
    <item
        android:id="@+id/settings_item"
        android:icon="@drawable/baseline_settings_24"
        android:title="Event Settings" />
...
