...
                    app:backgroundTint="@color/red"
                    app:cornerRadius="8dp"
                    app:layout_constraintTop_toBottomOf="@id/button_join"
                    tools:layout_editor_absoluteX="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_acceptInvitation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="104dp"
                    android:padding="12dp"
                    android:text="Accept Invitation"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/green"
                    app:cornerRadius="8dp"
                    app:layout_constraintTop_toBottomOf="@id/button_leave"
                    tools:layout_editor_absoluteX="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_declineInvitation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="Decline Invitation"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/red"
...
